# if3270-tubes-2

./: README.md  pyproject.toml
data/nusax/: analyze_vocab.py
doc/: laporan.txt
src/cnn/: cnn.py  layer.py
src/ffnn/: activation.py  initializer.py  layer.py  loss.py  model.py  utils.py
src/lstm/: __init__.py  dropout_layer.py  embedding_layer.py  lstm_layer.py  lstm_model.py  text_preprocessor.py
src/models/: .gitkeep  best_lstm_directionality_custom.config.npy  best_lstm_directionality_model.keras  best_lstm_layers_custom.config.npy  best_lstm_layers_custom.preprocessor.npy  best_lstm_layers_model.keras  best_lstm_units_custom.config.npy  best_lstm_units_model.keras
src/notebooks/cnn/: conv_layer_analysis.ipynb  filter_amount_analysis.ipynb  filter_size_analysis.ipynb  pooling_analysis.ipynb  scratch_keras_comparison.ipynb
src/notebooks/lstm/: lstm_cells_analysis.ipynb  lstm_directionality_analysis.ipynb  lstm_layers_analysis.ipynb  lstm_model_comparison.ipynb
src/notebooks/rnn/: cell_analysis.ipynb  directionality_analysis.ipynb  layer_analysis.ipynb  scratch_keras_comparison.ipynb
src/rnn/: keras.py  layer.py  model.py  preprocessing.py  train.py  utils.py
src/rnn/notebooks/: cell_analysis.ipynb  directionality_analysis.ipynb  layer_analysis.ipynb  scratch_keras_comparison.ipynb
src/rnn/output/: dense_layer_weights.npz  keras_model.weights.h5  model.weights.h5  model.weights.h5_classifier  model_weights.npz  scratch_model.weights.npy  scratch_model.weights.npy_classifier  training_results.json
